[package]
name = "vyre-conform-spec"
version = "0.6.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Witness sets and composition laws for vyre conformance testing."
readme = "README.md"
keywords = ["vyre", "conformance", "spec", "witness"]
categories = ["development-tools::testing"]
publish = false

[lints]
workspace = true

[dependencies]
vyre.workspace = true
blake3 = { workspace = true }
